[package]
name = "httq-proto"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the HTTQ transport protocol."
license = "MIT"
repository = "https://github.com/aevov/httq-proto"
authors = ["WPWakanda LLC <contact@wakanda.q>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
